--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -12,7 +12,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <LinearLayout
@@ -31,8 +31,7 @@
                     android:id="@+id/top"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                   >
+                    android:gravity="center_vertical">
 
                     <LinearLayout
                         android:id="@+id/total_step"
@@ -42,7 +41,6 @@
                         android:layout_marginEnd="50dp"
                         android:orientation="vertical"
                        >
-
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -123,6 +121,7 @@
                             android:textSize="15sp" />
 
                         <TextView
+
                             android:id="@+id/best_result_day"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -145,7 +144,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="30sp"
-                tools:text="21251 steps" />
+                tools:text=""
+                android:layout_marginTop="20dp"
+                android:textAlignment="center"/>
         </LinearLayout>
     </ScrollView>
 
