--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -148,6 +148,17 @@
                 android:layout_marginTop="20dp"
                 android:textAlignment="center"/>
         </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/day_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <org.osmdroid.views.MapView
+                android:layout_width="wrap_content"
+                android:layout_height="300dp"/>
+        </LinearLayout>
     </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
