--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -139,26 +139,72 @@
                     android:layout_marginTop="20dp"
                     />
 
-            <TextView
-                android:id="@+id/txtDetail"
+            <LinearLayout
+                android:id="@+id/day_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
-                tools:text=""
+                android:orientation="vertical"
                 android:layout_marginTop="20dp"
-                android:textAlignment="center"/>
+                android:paddingHorizontal="10dp"
+                android:paddingBottom="100dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/day_steps"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textAlignment="center"
+                        tools:text="steps: 243252"/>
+                    <TextView
+                        android:id="@+id/day_distance"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:layout_weight="1"
+                        tools:text="distance: 243252"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/day_weather_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:visibility="gone"
+                    tools:visibility="visible"
+
+                    >
+                    <TextView
+                        android:id="@+id/day_temp"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:padding="5dp"
+                        android:textAlignment="center"
+                        tools:text="temp 15c"/>
+                    <TextView
+                        android:id="@+id/day_wind"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:padding="5dp"
+                        android:textAlignment="center"
+                        tools:text="wind 6m/s"/>
+                </LinearLayout>
+
+                <org.osmdroid.views.MapView
+                    android:id="@+id/map"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="300dp"/>
+
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/day_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
-            <org.osmdroid.views.MapView
-                android:layout_width="wrap_content"
-                android:layout_height="300dp"/>
-        </LinearLayout>
     </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
