--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -14,6 +14,7 @@
         android:layout_marginEnd="50dp"
         android:gravity="center_horizontal"
         android:text="@string/user_update_title"
+        android:contentDescription="@string/update_form"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,9 +28,8 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
-        android:contentDescription="Enter name"
+        android:contentDescription="@string/name_input_layout"
         android:gravity="center"
-        android:hint="@string/enter_name"
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:endIconMode="clear_text"
@@ -54,9 +54,8 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="50dp"
-        android:contentDescription="Enter weight"
+        android:contentDescription="@string/weight_input_layout"
         android:gravity="center"
-        android:hint="@string/enter_weight"
         app:counterEnabled="true"
         app:counterMaxLength="3"
         app:endIconMode="clear_text"
@@ -83,9 +82,8 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="50dp"
-        android:contentDescription="Enter height"
+        android:contentDescription="@string/height_input_layout"
         android:gravity="center"
-        android:hint="@string/enter_height"
         app:counterEnabled="true"
         app:counterMaxLength="3"
         app:endIconMode="clear_text"
@@ -112,9 +110,8 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="50dp"
-        android:contentDescription="Set daily goal"
+        android:contentDescription="@string/goal_input_layout"
         android:gravity="center"
-        android:hint="@string/enter_goal"
         app:endIconMode="clear_text"
         app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -148,12 +145,14 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/save_button"
+            android:contentDescription="@string/submit_button"
             app:cornerRadius="24dp" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnCancel"
             style="@style/Widget.MyApp.MyButton"
             android:layout_width="150dp"
+            android:contentDescription="@string/cancel_button"
             android:layout_height="wrap_content"
             android:text="@string/cancel_button"
             app:cornerRadius="24dp" />
