--- a/app/src/main/res/layout/component_progress_bar.xml
+++ b/app/src/main/res/layout/component_progress_bar.xml
@@ -7,7 +7,7 @@
     >
     <TextView
         android:id="@+id/date"
-        android:text="moro"
+        android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
@@ -15,6 +15,7 @@
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="0dp"
+        android:contentDescription="@string/progress_bar"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         style="?android:attr/progressBarStyleHorizontal"
