--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -35,6 +35,7 @@
             android:layout_width="300dp"
             android:layout_height="300dp"
             android:background="@drawable/circular_shape"
+            android:contentDescription="@string/progress_bar"
             android:indeterminate="false"
             android:max="100"
             android:progress="65"
@@ -138,6 +139,7 @@
                     android:id="@+id/imageView2"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:contentDescription="@string/distance"
                     android:src="@drawable/ic_distance"
                     app:tint="@color/darkPink" />
 
@@ -168,6 +170,7 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     app:tint="@color/darkPink"
+                    android:contentDescription="@string/kcal"
                     android:src="@drawable/ic_fire"
                     />
                 <TextView
@@ -198,6 +201,7 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/ic_timer"
+                    android:contentDescription="@string/timer"
                     app:tint="@color/darkPink" />
 
                 <Chronometer
@@ -216,6 +220,7 @@
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_marginTop="20dp"
+        android:contentDescription="@string/map"
         android:layout_height="300dp"/>
     </LinearLayout>
 </ScrollView>
