--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -137,16 +137,10 @@
                     android:layout_height="wrap_content"
                     android:minHeight="300dp"
                     android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:contentDescription="@string/graph"
                     />
 
-            <LinearLayout
-                android:id="@+id/day_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:paddingHorizontal="10dp"
-                android:paddingBottom="100dp"
-                android:orientation="horizontal" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -199,7 +193,8 @@
                     android:id="@+id/map"
                     android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="300dp"/>
+                    android:layout_height="300dp"
+                    android:contentDescription="@string/map"/>
             </LinearLayout>
 
     </ScrollView>
