--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -25,7 +25,7 @@
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
             android:layout_gravity="center"
-            android:text="Day" />
+            android:text="@string/date" />
 
         <TextView
             android:id="@+id/temp"
@@ -33,14 +33,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="5dp"
-            android:text="Temp" />
+            android:text="@string/temp" />
 
         <ImageView
             android:id="@+id/icon"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginBottom="5dp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:contentDescription="@string/icon"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
