--- a/app/src/main/res/layout/component_progress_bar.xml
+++ b/app/src/main/res/layout/component_progress_bar.xml
@@ -17,6 +17,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:contentDescription="@string/progress_bar"
         style="?android:attr/progressBarStyleHorizontal"
         android:scaleY="4"
         />
