--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -76,7 +76,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:text="@string/initial_step"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"
+                        android:textColor="@color/dark"/>
 
                     <ImageView
                         android:id="@+id/weather_icon"
