--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -25,7 +25,8 @@
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
             android:layout_gravity="center"
-            android:text="@string/date" />
+            android:text="@string/date"
+            android:textColor="@color/dark"/>
 
         <TextView
             android:id="@+id/temp"
@@ -33,7 +34,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="5dp"
-            android:text="@string/temp" />
+            android:text="@string/temp"
+            android:textColor="@color/dark"/>
 
         <ImageView
             android:id="@+id/icon"
