--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/txtTitle"
         android:layout_width="match_parent"
@@ -27,9 +30,9 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
-        android:contentDescription="Enter name"
-        android:gravity="center"
+        android:contentDescription="@string/name_input_layout"
         android:hint="@string/enter_name"
+        android:gravity="center"
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:endIconMode="clear_text"
@@ -54,9 +57,9 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="50dp"
-        android:contentDescription="Enter weight"
-        android:gravity="center"
+        android:contentDescription="@string/weight_input_layout"
         android:hint="@string/enter_weight"
+        android:gravity="center"
         app:counterEnabled="true"
         app:counterMaxLength="3"
         app:endIconMode="clear_text"
@@ -83,9 +86,9 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="50dp"
-        android:contentDescription="Enter height"
-        android:gravity="center"
+        android:contentDescription="@string/height_input_layout"
         android:hint="@string/enter_height"
+        android:gravity="center"
         app:counterEnabled="true"
         app:counterMaxLength="3"
         app:endIconMode="clear_text"
@@ -112,9 +115,9 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="50dp"
-        android:contentDescription="Set daily goal"
-        android:gravity="center"
+        android:contentDescription="@string/goal_input_layout"
         android:hint="@string/enter_goal"
+        android:gravity="center"
         app:endIconMode="clear_text"
         app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -137,6 +140,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginBottom="20dp"
         android:orientation="horizontal"
+        android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -148,6 +152,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/save_button"
+            android:contentDescription="@string/submit_button"
             app:cornerRadius="24dp" />
 
         <com.google.android.material.button.MaterialButton
@@ -156,8 +161,10 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/cancel_button"
+            android:contentDescription="@string/cancel_button"
             app:cornerRadius="24dp" />
     </LinearLayout>
 
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
